# clozify-llm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python.yml
src/clozify_llm/: cli.py  constants.py  embed.py  finetune.py  join.py  main.py  predict.py  utils.py
src/clozify_llm/extract/: extract_cloze.py  extract_wortschatz.py
tests/: conftest.py  test_cli.py  test_embed.py  test_extract_cloze.py  test_extract_wortschatz.py  test_finetune.py  test_join.py  test_main.py  test_predict.py  test_utils.py
