[tool.poetry]
name = "clozify-openai"
version = "0.1.0"
description = ""
authors = ["awbirdsall"]
readme = "README.md"
packages = [{include = "clozify_llm", from="src"}]

[tool.poetry.scripts]
clozify = "clozify_llm.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pylint = "^2.17.0"
pre-commit = "^3.1.1"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
