[tool.poetry]
name = "clozify-openai"
version = "0.1.0"
description = ""
authors = ["awbirdsall"]
readme = "README.md"
packages = [{include = "clozify_llm", from="src"}]

[tool.poetry.scripts]
clozify = "clozify_llm.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
tenacity = "^8.2.2"
click = "^8.1.3"

[tool.poetry.group.prep]
optional = true

[tool.poetry.group.prep.dependencies]
pandas = "^1.5.3"
ipython = "^8.11.0"
requests = "^2.28.2"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"
html5lib = "^1.1"
scikit-learn = "^1.2.2"
odfpy = "^1.4.1"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pylint = "^2.17.0"
pre-commit = "^3.1.1"
ruff = "^0.0.267"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[tool.poetry.group.lab.dependencies]
jupyterlab = "^3.6.3"
session-info = "^1.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addops = "--cov"

[tool.coverage.run]
source = ["clozify_llm"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
